<resources>
    <string name="app_name">Cloud Pod</string>

    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlists</string>

    <string name="total_songs">Total Songs</string>
    <string name="song_name">Song Name</string>
    <string name="player_txt">Explore Mood</string>
    <string name="back_btn">Back</string>

    <string name="play_next">Play Next</string>
    <string name="play_previous">Play Previous</string>
    <string name="play">Play </string>

    <string name="start_tv">00.00</string>
    <string name="end_tv">Loading</string>

    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to Cloud Pod \nExplore Mood </string>

    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="song_album">Song Album</string>

    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>

    <string name="search_view">Search view</string>

    <string name="song_img">Song Img</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>

    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>

    <string name="topic_feedback">Topic i.e. Suggestion,Error,etc.</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="send">SEND</string>

    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>


</resources>