<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    app:strokeColor="?attr/themeColor"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playListImg"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:src="@drawable/logo_icon_slash_screen"
        app:shapeAppearanceOverlay="@style/curved"
        android:contentDescription="@string/song_img"/>

    <TextView
        android:id="@+id/playListName"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/playlist_name"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/playlist_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/playlistDeleteBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/delete_icon"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="130dp"
        android:layout_marginStart="130dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/playlist_delete"
        app:tint="?attr/themeColor" />

</com.google.android.material.card.MaterialCardView>