<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetails">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/themeColor"
        android:layout_marginTop="2dp">

        <ImageButton
            android:id="@+id/backBtnPD"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/playlist_btn"
            android:src="@drawable/back_icon"
            app:tint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/playlistNamePD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/playlist_btn"
            android:text="@string/playlist_btn"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:background="?attr/themeColor"
        android:layout_marginTop="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistImgPD"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo_icon_slash_screen"/>

        <TextView
            android:id="@+id/moreInfoPD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_name"
            android:gravity="center|start"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistDetailsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingBottom="150dp"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutDetails" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffleBtnPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/playlist_name"
        app:icon="@drawable/shuffle_icon"
        app:iconTint="?attr/themeColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:strokeColor="?attr/themeColor"
        app:strokeWidth="2dp"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:visibility="invisible"
        >

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addBtnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add_song"
            android:drawableLeft="@drawable/add_icon"
            android:text="@string/add_song"
            android:textAllCaps="false"
            android:textColor="?colorOnPrimary"
            tools:ignore="RtlHardcoded,VisualLintButtonSize" />

        <Button
            android:id="@+id/removeAllPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/remove_all"
            android:drawableLeft="@drawable/remove_icon"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textColor="?colorOnPrimary"
            tools:ignore="RtlHardcoded,VisualLintButtonSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>