<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/set_theme"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/redTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/red"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/blueTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_blue"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tealTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/teal_200"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/greenTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_green"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/blackTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginVertical="2dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/sort_by"
            android:background="@color/white"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center|start"
            android:layout_weight="1"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sortBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/sort_icon"
            android:tint="@color/red"
            android:padding="2dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/versionName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/version_name"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="16dp" />


</LinearLayout>